--- a/css/global.css
+++ b/css/global.css
@@ -1,8 +1,17 @@
 html, body {
     overflow-x: hidden;
 
-    width      : 100%;
-    height     : 100%;
-    min-width  : 100%;
-    min-height : 100%;
+    width      : 100vw;
+    height     : 100vh;
+    min-width  : 100vw;
+    min-height : 100vh;
+}
+
+#main {
+    margin: 0 auto;
+
+    width     : 750px;
+    height    : 100vh;
+    max-width : 100vw;
+    min-height: 100vh;
 }
